# zurihac15-talk-examples

./: .travis.yml  LICENSE  README.md  collatz.hs  launch.sh  zurihac15-talk-examples.cabal
